# AdventOfCode

aoc2023/Day1/: Day1.hi  Day1.hs
aoc2023/Day2/: Day2.hs
aoc2024/: LICENSE  aoc2024.cabal
aoc2024/app/: Day1.hs  Day2.hs  Main.hs
