cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             zchown
maintainer:         91749140+zchown@users.noreply.github.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable aoc2024
    import:           warnings
    main-is:          Main.hs
    other-modules:    Day1
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , composition

    hs-source-dirs:   app
    default-language: Haskell2010
